--- a/styles/signin.module.scss
+++ b/styles/signin.module.scss
@@ -57,26 +57,73 @@
       font-size: 50px;
       margin: 0;
     }
-    p{
-        color: #96979b;
+    p {
+      color: #96979b;
     }
-    form{
-        margin-top: 2rem;
-        
+    form {
+      margin-top: 2rem;
     }
-    .forgot{
+    .forgot {
       color: #666;
       padding-top: 1rem;
       font-size: 14px;
       width: fit-content;
       height: 40px;
-      &:hover{
+      &:hover {
         color: $blue-color;
         border-bottom: 1px solid $blue-color;
       }
-
-
-
     }
   }
+
+  &__socials {
+    margin-top: 1rem;
+    .or {
+      position: relative;
+      color: #666;
+      padding-left: 8rem;
+
+      &::after,
+      &::before {
+        content: "";
+        width: 130px;
+        height: 1px;
+        background: #66666648;
+        position: absolute;
+        top: 50%;
+      }
+      &::before {
+        left: 250px;
+      }
+      &::after {
+        left: -10px;
+      }
+    }
+
+    &_wrap {
+      margin-top: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      padding-left: 3rem;
+      img {
+        width: 36px;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+.socials__btn {
+  border: none;
+  outline: none;
+  width: 290px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding-left: 5%;
+  gap: 10px;
+  background: transparent;
+  border: 1px solid #66666683;
+  cursor: pointer;
 }
