--- a/styles/signin.module.scss
+++ b/styles/signin.module.scss
@@ -5,8 +5,7 @@
   display: flex;
   justify-content: center;
 
-
-  @media (max-width:790px) {
+  @media (max-width: 790px) {
     flex-direction: column;
     align-items: center;
   }
@@ -16,10 +15,10 @@
 
     &:last-of-type {
       margin-top: 3rem;
-      
-  @media (max-width:790px) {
-margin-top: 0rem;
-  }
+
+      @media (max-width: 790px) {
+        margin-top: 0rem;
+      }
     }
   }
   &__header {
@@ -136,4 +135,13 @@ margin-top: 0rem;
   background: transparent;
   border: 1px solid #66666683;
   cursor: pointer;
+}
+
+.error {
+  padding: 10px;
+  color: $error-color;
+}
+
+.success {
+  color: $success-color;
 }
