--- a/components/header/styles.module.scss
+++ b/components/header/styles.module.scss
@@ -7,13 +7,14 @@
 .ad {
   height: 54px;
   width: 100%;
+  
   background-image: url("../../public/images//ad.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
 }
 //===========================TOP================================
-
+  
 .top {
   background: #f8f8f8;
   border-top: 1px solid#eee;
@@ -181,6 +182,8 @@
   }
   .logo {
     img {
+        object-fit: cover;
+       
       width: 170px;
       margin-top: 10px;
     }
